crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__boundary_array.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let x = [1\n\nfn next() { 0 }"
---
alder::syntax

  × I was expecting `,` or `]` after this array entry
   ╭─[/project/src/main.ald:1:11]
 1 │ let x = [1
   ·         ┬ ▲
   ·         │ ╰── expected `,` or `]`
   ·         ╰── this `[` opens here
 2 │ 
   ╰────
  help: separate array entries with commas and close the array with `]`
