crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__boundary_import_alias.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "import ~/helper.{ delayed as later // keep this comment\n\ntype Operation = Int"
---
alder::syntax

  × I was expecting `,` or `}` after this imported name
   ╭─[/project/src/main.ald:1:35]
 1 │ import ~/helper.{ delayed as later // keep this comment
   ·                 ┬                 ▲
   ·                 │                 ╰── expected `,` or `}`
   ·                 ╰── this `{` opens here
 2 │ 
   ╰────
