crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__boundary_nested_call.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let x = [f(1\n\ntype Next = Int"
---
alder::syntax

  × I was expecting `,` or `)` after this call argument
   ╭─[/project/src/main.ald:1:13]
 1 │ let x = [f(1
   ·           ┬ ▲
   ·           │ ╰── expected `,` or `)`
   ·           ╰── this `(` opens here
 2 │ 
   ╰────
  help: separate arguments with commas and close the call with `)`
